fix: missing margin

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -73,7 +73,7 @@ button {
   flex-flow: row nowrap;
   gap: 8px;
   max-width: 371px;
-  margin: 0 auto 32px;
+  margin: 0 auto;
 }
 
 .search-form__query-input {
